Query Parameters are now reusable. I opted out of making path parameters reusable as well, since they are often specific to the path.
